--- a/task 5/front-end/softy-pinko-front-end/index.html
+++ b/task 5/front-end/softy-pinko-front-end/index.html
@@ -630,5 +630,18 @@
     <!-- Global Init -->
     <script src="assets/js/custom.js"></script>
 
+    <script>
+        // Load dynamic data from the back-end on port 5252
+        $(function() {
+            $.ajax({
+                type: "GET",
+                url: "/api/hello",
+                success: function (data) {
+                    console.log(data);
+                    $('#dynamic-content').text(data);
+                }
+            });
+        });
+    </script>
   </body>
 </html>
